CMS: Assert failed: Ctl pt invariant

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • gc
    • b81
    • sparc
    • solaris_11
    • Verified

        Nigtly test metaspace/gc/watermark_0_1 and metaspace/gc/watermark_10_20 failed with

        # Internal Error
        (/opt/jprt/T/P1/111822.staffan/s/hotspot/src/share/vm/gc/cms/concurrentMarkSweepGeneration.cpp:4990), pid=12846, tid=0x0000000000000008
        # assert(_cursor[j] == _survivor_plab_array[j].end()) failed: Ctl pt invariant

              Assignee:
              Eric Caspole
              Reporter:
              Dmitriy Samersoff
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: