8133349: CMS: Assert failed: Ctl pt invariant

_survivor_chunk_array should be sized based on PLAB::min_size() not ThreadLocalAllocBuffer::min_size()

Reviewed-by: tschatzl, jwilhelm